Bug 1745894 - Don't draw window decorations when painting headerbar on wayland. r=stransky

This is a better fix for the double decorations than clipping them using
CSS.

Differential Revision: https://phabricator.services.mozilla.com/D133871